--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.4.8",
-    "express": "^4.16.4",
+    "apollo-server": "^2.4.8",
     "graphql": "^14.2.1",
     "lodash": "^4.17.11",
     "mysql": "^2.17.1",
@@ -21,7 +20,6 @@
     "typeorm": "^0.2.16"
   },
   "devDependencies": {
-    "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
     "@types/lodash": "^4.14.123",
     "@types/node": "^8.0.29",
