--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm run build && node dist/src/index.js",
     "build": "tsc",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "lint": "tslint --project tsconfig.json --config tslint.json \"src/**/*.ts\""
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,9 @@
     "@types/node": "^8.0.29",
     "nodemon": "^1.18.11",
     "ts-node": "^3.3.0",
+    "tslint": "^5.16.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^3.4.4"
   }
 }
