--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.4.8",
+    "bcrypt": "^3.0.6",
     "graphql": "^14.2.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.16"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/graphql": "^14.2.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.123",
     "@types/node": "^8.0.29",
     "nodemon": "^1.18.11",
