--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,23 +1,17 @@
 {
-  "type": "mysql",
-  "host": "localhost",
-  "port": 3306,
-  "username": "root",
-  "password": "root",
-  "database": "LiveMaps",
-  "synchronize": false,
-  "logging": true,
-  "entities": [
-     "src/entities/**/*.ts"
-  ],
-  "migrations": [
-     "src/migration/**/*.ts"
-  ],
-  "subscribers": [
-     "src/subscriber/**/*.ts"
-  ],
-  "cli": {
-      "entitiesDir": "src/entities",
-      "migrationsDir": "src/migration"
-  }
+	"type": "mysql",
+	"host": "localhost",
+	"port": 3306,
+	"username": "root",
+	"password": "",
+	"database": "LiveMaps",
+	"synchronize": false,
+	"logging": true,
+	"entities": [ "src/entities/**/*.ts" ],
+	"migrations": [ "src/migration/**/*.ts" ],
+	"subscribers": [ "src/subscriber/**/*.ts" ],
+	"cli": {
+		"entitiesDir": "src/entities",
+		"migrationsDir": "src/migration"
+	}
 }
