--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node dist/src/index.js",
     "build": "tsc",
-    "dev": "nodemon --watch src/**/*.ts --exec ts-node src\\index.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "lint": "tslint --project tsconfig.json --config tslint.json \"src/**/*.ts\""
   },
   "keywords": [],
